Symlinks phantomjs for CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
             if ! [ $(which phantomjs) ]; then                
               sudo curl --output /usr/local/bin/phantomjs https://s3.amazonaws.com/circle-downloads/phantomjs-2.1.1
               sudo chmod ugo+x /usr/local/bin/phantomjs
+              sudo ln -sf /tmp/phantomjs /usr/local/bin/phantomjs
             fi
 
       - restore_cache:
